--- a/app/src/main/res/layout/view_feed_item.xml
+++ b/app/src/main/res/layout/view_feed_item.xml
@@ -1,95 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/default_margin_padding"
-    android:layout_marginLeft="@dimen/default_margin_padding"
-    android:layout_marginRight="@dimen/default_margin_padding"
-    android:layout_marginTop="@dimen/default_margin_padding"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="@dimen/card_view_corner_radius"
-    app:cardPreventCornerOverlap="true">
+    android:layout_height="wrap_content">
 
-    <com.balysv.materialripple.MaterialRippleLayout
-        android:id="@+id/mrl_feed_button"
-        style="@style/RippleEffect"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <android.support.v7.widget.CardView
+        android:layout_width="@dimen/feed_item_width"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="@dimen/default_margin_padding"
+        android:layout_marginLeft="@dimen/default_margin_padding"
+        android:layout_marginRight="@dimen/default_margin_padding"
+        android:layout_marginTop="@dimen/default_margin_padding"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="@dimen/card_view_corner_radius"
+        app:cardPreventCornerOverlap="true">
 
-        <LinearLayout
+        <com.balysv.materialripple.MaterialRippleLayout
+            android:id="@+id/mrl_feed_button"
+            style="@style/RippleEffect"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-            <FrameLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/iv_feed_title"
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/post_image_height"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/iv_feed_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/post_image_height"
+                        android:background="@null"
+                        android:contentDescription="@null"
+                        android:scaleType="centerCrop" />
+
+                    <ImageView
+                        android:id="@+id/iv_feed_bookmark_indicator"
+                        android:layout_width="@dimen/bookmark_indicator_size"
+                        android:layout_height="@dimen/bookmark_indicator_size"
+                        android:layout_gravity="end"
+                        android:layout_marginEnd="@dimen/default_margin_padding"
+                        android:layout_marginRight="@dimen/default_margin_padding"
+                        android:contentDescription="@null"
+                        android:scaleType="fitCenter"
+                        android:src="@mipmap/ic_bookmark_indicator"
+                        android:visibility="gone" />
+                </FrameLayout>
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/default_margin_padding_large" />
+
+                <TextView
+                    android:id="@+id/tv_feed_label"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:background="@null"
-                    android:contentDescription="@null"
-                    android:scaleType="centerCrop" />
+                    android:paddingBottom="@dimen/default_margin_padding"
+                    android:paddingLeft="@dimen/default_margin_padding_large"
+                    android:paddingRight="@dimen/default_margin_padding_large"
+                    android:text="@string/sample"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="@dimen/default_text_size_extra_small" />
 
-                <ImageView
-                    android:id="@+id/iv_feed_bookmark_indicator"
-                    android:layout_width="@dimen/bookmark_indicator_size"
-                    android:layout_height="@dimen/bookmark_indicator_size"
-                    android:layout_gravity="end"
-                    android:layout_marginEnd="@dimen/default_margin_padding"
-                    android:layout_marginRight="@dimen/default_margin_padding"
-                    android:contentDescription="@null"
-                    android:scaleType="fitCenter"
-                    android:src="@mipmap/ic_bookmark_indicator"
-                    android:visibility="gone" />
-            </FrameLayout>
+                <TextView
+                    android:id="@+id/tv_feed_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:paddingLeft="@dimen/default_margin_padding_large"
+                    android:paddingRight="@dimen/default_margin_padding_large"
+                    android:text="@string/sample"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="@dimen/default_text_size_small" />
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/default_margin_padding_large" />
-
-            <TextView
-                android:id="@+id/tv_feed_label"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:paddingBottom="@dimen/default_margin_padding"
-                android:paddingLeft="@dimen/default_margin_padding_large"
-                android:paddingRight="@dimen/default_margin_padding_large"
-                android:text="@string/sample"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="@dimen/default_text_size_extra_small" />
-
-            <TextView
-                android:id="@+id/tv_feed_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:paddingLeft="@dimen/default_margin_padding_large"
-                android:paddingRight="@dimen/default_margin_padding_large"
-                android:text="@string/sample"
-                android:textColor="@color/dark_gray"
-                android:textSize="@dimen/default_text_size_small" />
-
-            <TextView
-                android:id="@+id/tv_feed_date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:gravity="right"
-                android:paddingBottom="@dimen/default_margin_padding"
-                android:paddingEnd="@dimen/default_margin_padding"
-                android:paddingLeft="@dimen/default_margin_padding_large"
-                android:paddingRight="@dimen/default_margin_padding"
-                android:paddingStart="@dimen/default_margin_padding_large"
-                android:paddingTop="@dimen/default_margin_padding_large"
-                android:text="@string/sample"
-                android:textColor="@color/light_gray"
-                android:textSize="@dimen/default_text_size_extra_small" />
-        </LinearLayout>
-    </com.balysv.materialripple.MaterialRippleLayout>
-</android.support.v7.widget.CardView>
+                <TextView
+                    android:id="@+id/tv_feed_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:gravity="right"
+                    android:paddingBottom="@dimen/default_margin_padding"
+                    android:paddingEnd="@dimen/default_margin_padding"
+                    android:paddingLeft="@dimen/default_margin_padding_large"
+                    android:paddingRight="@dimen/default_margin_padding"
+                    android:paddingStart="@dimen/default_margin_padding_large"
+                    android:paddingTop="@dimen/default_margin_padding_large"
+                    android:text="@string/sample"
+                    android:textColor="@color/light_gray"
+                    android:textSize="@dimen/default_text_size_extra_small" />
+            </LinearLayout>
+        </com.balysv.materialripple.MaterialRippleLayout>
+    </android.support.v7.widget.CardView>
+</FrameLayout>
