--- a/app/src/main/res/layout/view_post_content_image.xml
+++ b/app/src/main/res/layout/view_post_content_image.xml
@@ -12,8 +12,9 @@
 
     <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
         android:id="@+id/iv_post_content_image"
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/image_content_width"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="@dimen/default_margin_padding_small"
         android:layout_marginTop="@dimen/default_margin_padding_small"
         android:adjustViewBounds="true" />
