--- a/app/src/main/res/values-sw600dp-land/dimens.xml
+++ b/app/src/main/res/values-sw600dp-land/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="image_content_width">400dp</dimen>
     <dimen name="feed_item_width">@integer/match_parent</dimen>
     <dimen name="bookmark_item_width">@integer/match_parent</dimen>
+    <dimen name="menu_button_margin">15dp</dimen>
 
 </resources>
