--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -2,5 +2,6 @@
 
     <dimen name="feed_item_width">@integer/match_parent</dimen>
     <dimen name="image_content_width">400dp</dimen>
+    <dimen name="menu_button_margin">15dp</dimen>
 
 </resources>
