Fix multiple screen support

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
 
     <dimen name="bottom_menu_margin">15dp</dimen>
     <dimen name="menu_button_margin">5dp</dimen>
+    <dimen name="toolbar_height">64dp</dimen>
 
     <dimen name="image_content_width">@integer/match_parent</dimen>
     <dimen name="feed_item_width">@integer/match_parent</dimen>
