--- a/app/src/main/res/layout/view_include_post_content.xml
+++ b/app/src/main/res/layout/view_include_post_content.xml
@@ -4,8 +4,9 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_post_list"
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/post_content_width"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:fillViewport="false"
         android:paddingLeft="@dimen/default_margin_padding"
         android:paddingRight="@dimen/default_margin_padding"
