--- a/app/src/main/res/values-sw600dp-land/dimens.xml
+++ b/app/src/main/res/values-sw600dp-land/dimens.xml
@@ -2,8 +2,8 @@
 
     <dimen name="app_bar_layout_height">130dp</dimen>
     <dimen name="image_content_width">400dp</dimen>
-    <dimen name="feed_item_width">@integer/match_parent</dimen>
-    <dimen name="bookmark_item_width">@integer/match_parent</dimen>
+    <dimen name="feed_item_width">@dimen/match_parent</dimen>
+    <dimen name="bookmark_item_width">@dimen/match_parent</dimen>
     <dimen name="menu_button_margin">15dp</dimen>
     <dimen name="post_content_width">700dp</dimen>
 
