--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="feed_item_width">400dp</dimen>
     <dimen name="image_content_width">400dp</dimen>
     <dimen name="menu_button_margin">15dp</dimen>
+    <dimen name="dialog_message_width">400dp</dimen>
 
     <dimen name="default_text_size_extra_extra_small">12sp</dimen>
     <dimen name="default_text_size_extra_small">14sp</dimen>
