--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,6 +25,7 @@
     <dimen name="toolbar_height">64dp</dimen>
 
     <dimen name="splash_screen_image_size">120dp</dimen>
+    <dimen name="dialog_message_width">300dp</dimen>
     <dimen name="image_content_width">@dimen/match_parent</dimen>
     <dimen name="feed_item_width">@dimen/match_parent</dimen>
     <dimen name="bookmark_item_width">@dimen/match_parent</dimen>
