--- a/app/src/main/res/layout/view_include_search_result_content.xml
+++ b/app/src/main/res/layout/view_include_search_result_content.xml
@@ -24,6 +24,7 @@
         android:layout_gravity="center"
         android:layout_marginBottom="@dimen/default_margin_padding"
         android:layout_marginTop="@dimen/default_margin_padding"
+        android:gravity="center"
         android:text="@string/post_not_found"
         android:textColor="@color/dark_gray"
         android:textSize="@dimen/default_text_size_large" />
