--- a/app/src/main/res/drawable/vector_ic_exit.xml
+++ b/app/src/main/res/drawable/vector_ic_exit.xml
@@ -2,12 +2,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="36dp"
     android:height="36dp"
-    android:viewportHeight="24"
-    android:viewportWidth="24">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
+        android:pathData="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59
+19 19 17.59 13.41 12z" />
     <path
-        android:fillColor="#00FFFFFF"
         android:pathData="M0 0h24v24H0z" />
 </vector>
