Change icon name

--- a/app/src/main/res/layout/activity_offline_post_image_preview.xml
+++ b/app/src/main/res/layout/activity_offline_post_image_preview.xml
@@ -19,5 +19,5 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="bottom|center_horizontal"
-        app:srcCompat="@drawable/vector_ic_exit" />
+        app:srcCompat="@drawable/vector_ic_close" />
 </RelativeLayout>
