--- a/app/src/main/res/layout/activity_post_image_preview.xml
+++ b/app/src/main/res/layout/activity_post_image_preview.xml
@@ -32,7 +32,7 @@
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_preview_close"
             style="@style/FloatingActionButton"
-            app:srcCompat="@drawable/vector_ic_exit" />
+            app:srcCompat="@drawable/vector_ic_close" />
 
     </LinearLayout>
 </RelativeLayout>
