--- a/app/src/main/res/drawable/vector_ic_back.xml
+++ b/app/src/main/res/drawable/vector_ic_back.xml
@@ -2,12 +2,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="36dp"
     android:height="36dp"
-    android:viewportHeight="24"
-    android:viewportWidth="24">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+
     <path
         android:fillColor="#FFFFFF"
         android:pathData="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z" />
     <path
-        android:fillColor="#00FFFFFF"
         android:pathData="M0-.5h24v24H0z" />
 </vector>
