--- a/app/src/main/res/drawable/vector_ic_download.xml
+++ b/app/src/main/res/drawable/vector_ic_download.xml
@@ -2,12 +2,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="36dp"
     android:height="36dp"
-    android:viewportHeight="24"
-    android:viewportWidth="24">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+
     <path
         android:fillColor="#FFFFFF"
         android:pathData="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" />
     <path
-        android:fillColor="#00FFFFFF"
         android:pathData="M0 0h24v24H0z" />
 </vector>
