--- a/app/src/main/res/drawable/vector_ic_menu.xml
+++ b/app/src/main/res/drawable/vector_ic_menu.xml
@@ -2,10 +2,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="36dp"
     android:height="36dp"
-    android:viewportHeight="24"
-    android:viewportWidth="24">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+
     <path
-        android:fillColor="#00FFFFFF"
         android:pathData="M0 0h24v24H0z" />
     <path
         android:fillColor="#FFFFFF"
