--- a/app/src/main/res/drawable/vector_ic_warning.xml
+++ b/app/src/main/res/drawable/vector_ic_warning.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
-    android:viewportHeight="24"
-    android:viewportWidth="24">
+    android:width="36dp"
+    android:height="36dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+
     <path
-        android:fillColor="#00FFFFFF"
         android:pathData="M0 0h24v24H0z" />
     <path
         android:fillColor="#FFFFFF"
