--- a/app/src/main/res/layout/activity_post_image_preview.xml
+++ b/app/src/main/res/layout/activity_post_image_preview.xml
@@ -13,6 +13,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <com.zl.reik.dilatingdotsprogressbar.DilatingDotsProgressBar
+        android:id="@+id/pb_image_preview_loading"
+        style="@style/DotsProgressBar.White"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
