--- a/app/src/main/res/layout/view_post_content_video.xml
+++ b/app/src/main/res/layout/view_post_content_video.xml
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Click to watch video from"
+        android:text="@string/click_to_watch_video"
         android:textColor="@color/white"
         android:textSize="@dimen/default_text_size" />
 
