--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -104,4 +104,18 @@
         <item name="popupTheme">@style/AppTheme.PopupOverlay</item>
     </style>
 
+    <style name="Tooltips">
+        <item name="ttlm_backgroundColor">@color/colorAccent</item>
+        <item name="ttlm_cornerRadius">5dp</item>
+        <item name="ttlm_padding">@dimen/default_margin_padding_large</item>
+        <item name="ttlm_font">fonts/CSPraJad.otf</item>
+        <item name="ttlm_elevation">3dp</item>
+        <item name="android:textAppearance">@style/TooltipsText</item>
+    </style>
+
+    <style name="TooltipsText">
+        <item name="android:textSize">@dimen/default_text_size</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
