--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -29,11 +29,12 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/iv_logo"
             android:layout_width="@dimen/splash_screen_image_size"
             android:layout_height="@dimen/splash_screen_image_size"
             android:contentDescription="@null"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_sfl_avatar" />
+            android:src="@mipmap/ic_sfl_avatar" />
 
         <TextView
             android:layout_width="wrap_content"
