--- a/app/src/main/res/layout/view_include_toolbar_main_title.xml
+++ b/app/src/main/res/layout/view_include_toolbar_main_title.xml
@@ -27,6 +27,7 @@
                 android:layout_height="?attr/actionBarSize" />
 
             <ImageView
+                android:id="@+id/iv_title"
                 android:layout_width="@dimen/header_logo_size"
                 android:layout_height="@dimen/header_logo_size"
                 android:layout_gravity="center_horizontal"
