--- a/app/src/main/res/layout/activity_post_debug.xml
+++ b/app/src/main/res/layout/activity_post_debug.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,6 +34,13 @@
             android:checked="true"
             android:text="Image" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <CheckBox
             android:id="@+id/cb_code"
             android:layout_width="wrap_content"
@@ -49,13 +56,12 @@
             android:layout_marginRight="@dimen/default_margin_padding_small"
             android:checked="true"
             android:text="Other" />
-
     </LinearLayout>
 
     <ScrollView
-        android:background="@color/light_gray"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/light_gray"
         tools:context=".view.post.PostByIdActivity">
 
         <LinearLayout
