--- a/app/src/main/res/layout/dialog_message.xml
+++ b/app/src/main/res/layout/dialog_message.xml
@@ -13,13 +13,44 @@
         android:clickable="true"
         app:cardBackgroundColor="@color/white">
 
-        <TextView
-            android:id="@+id/tv_dialog_message"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/default_margin_padding_extra_large"
-            android:textColor="@color/black"
-            android:textSize="@dimen/default_text_size" />
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/default_margin_padding_extra_large"
+            android:paddingRight="@dimen/default_margin_padding_extra_large"
+            android:paddingTop="@dimen/default_margin_padding_extra_large">
+
+            <TextView
+                android:id="@+id/tv_dialog_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="@dimen/default_text_size" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/fab_dialog_close"
+                    style="@style/FloatingActionButton.Single"
+                    android:layout_width="@dimen/fab_dialog_button_size"
+                    android:layout_height="@dimen/fab_dialog_button_size"
+                    app:backgroundTint="@color/colorAccent"
+                    app:srcCompat="@drawable/vector_ic_close" />
+
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/fab_dialog_open_app"
+                    style="@style/FloatingActionButton.Single"
+                    android:layout_width="@dimen/fab_dialog_button_size"
+                    android:layout_height="@dimen/fab_dialog_button_size"
+                    app:backgroundTint="@color/colorAccent"
+                    app:srcCompat="@drawable/vector_ic_open_from_original" />
+            </LinearLayout>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 </FrameLayout>
