--- a/app/src/main/res/layout/dialog_message.xml
+++ b/app/src/main/res/layout/dialog_message.xml
@@ -26,6 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
+                android:textIsSelectable="true"
                 android:textSize="@dimen/default_text_size" />
 
             <LinearLayout
