--- a/app/src/main/res/layout/view_bookmark_item.xml
+++ b/app/src/main/res/layout/view_bookmark_item.xml
@@ -28,18 +28,6 @@
                 android:background="@null"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/iv_bookmark_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/post_image_height"
-                    android:background="@null"
-                    android:contentDescription="@null"
-                    android:scaleType="centerCrop" />
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/default_margin_padding_large" />
-
                 <TextView
                     android:id="@+id/tv_bookmark_label"
                     android:layout_width="match_parent"
@@ -48,8 +36,10 @@
                     android:paddingBottom="@dimen/default_margin_padding"
                     android:paddingLeft="@dimen/default_margin_padding_large"
                     android:paddingRight="@dimen/default_margin_padding_large"
+                    android:paddingTop="@dimen/default_margin_padding_large"
                     android:text="@string/sample"
                     android:textColor="@color/colorPrimaryDark"
+                    android:textIsSelectable="true"
                     android:textSize="@dimen/default_text_size_extra_small" />
 
                 <TextView
@@ -62,6 +52,7 @@
                     android:paddingRight="@dimen/default_margin_padding_large"
                     android:text="@string/sample"
                     android:textColor="@color/dark_gray"
+                    android:textIsSelectable="true"
                     android:textSize="@dimen/default_text_size_small" />
 
                 <TextView
@@ -78,6 +69,7 @@
                     android:paddingTop="@dimen/default_margin_padding_large"
                     android:text="@string/sample"
                     android:textColor="@color/light_gray"
+                    android:textIsSelectable="true"
                     android:textSize="@dimen/default_text_size_extra_small"
                     android:visibility="gone" />
             </LinearLayout>
